--- a/index.html
+++ b/index.html
@@ -28,3 +28,7 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<script type="application/javascript">
+  var global = window;
+</script>
